--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive 404 website - Bedimcode</title>
+        <title>Anson Ng | Error</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    XCOMPANY
+                    Anson Ng
                 </a>
 
-                <div class="nav__menu" id="nav-menu">
+                <div class="nav__menu" id="nav-menu" hidden >
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#" class="nav__link">Home</a>
@@ -31,7 +31,7 @@
                         <li class="nav__item">
                             <a href="#" class="nav__link">Contact</a>
                         </li>
-                    </ul>
+                    </ul hidden>
 
                     <div class="nav__close" id="nav-close">
                         <i class='bx bx-x'></i>
@@ -56,7 +56,7 @@
                         <p class="home__description">
                             We can't seem to find the page <br> you are looking for.
                         </p>
-                        <a href="#" class="home__button">
+                        <a href="https://ansonng.us" class="home__button">
                             Go Home
                         </a>
                     </div>
@@ -68,9 +68,9 @@
                 </div>
 
                 <footer class="home__footer">
-                    <span>(554) 987-654</span>
+                    <span>(000) 000-000</span>
                     <span>|</span>
-                    <span>info@company.com</span>
+                    <span>info@ansonng.com/span>
                 </footer>
             </section>
         </main>
