--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                     Anson Ng
                 </a>
 
-                <div class="nav__menu" id="nav-menu" hidden >
+                <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Home</a>
+                            <a href="" class="nav__link">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">About</a>
+                            <a href="/about" class="nav__link">About</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Contact</a>
+                            <a href="/contact" class="nav__link">Contact</a>
                         </li>
-                    </ul hidden>
+                    </ul>
 
                     <div class="nav__close" id="nav-close">
                         <i class='bx bx-x'></i>
@@ -56,7 +56,7 @@
                         <p class="home__description">
                             We can't seem to find the page <br> you are looking for.
                         </p>
-                        <a href="https://ansonng.us" class="home__button">
+                        <a href="#" class="home__button">
                             Go Home
                         </a>
                     </div>
@@ -70,7 +70,7 @@
                 <footer class="home__footer">
                     <span>(000) 000-000</span>
                     <span>|</span>
-                    <span>info@ansonng.com/span>
+                    <span>info@ansonng.com</span>
                 </footer>
             </section>
         </main>
